--- a/index.html
+++ b/index.html
@@ -5,108 +5,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Esportiva</title>
+    <link rel="icon" href="imagens/logo.png" type="image/png">
 </head>
 <body>
+<!--Header-->
     <header>
-        Esportiva
+        <nav class="nav">
+            <a href="index.html" > <img class="logo" src="imagens/logo.png">
+            <ul class="opções">
+                <li class="nav"><a class="opções" href="index.html"> Produtos </a></li>
+                <li class="nav"><a class="opções" href="carrinho.html"> <img src="imagens/carrinho.png" alt="carrinho"> </a></li>
+                <li class="nav"><a class="opções" href="login.html"> <img src="imagens/usuario.png" alt="usuario"> </a></li>
+            </ul>
     </header>
+<!--Fim Header-->
+<!--Aside-->
     <aside>
-        c
-    </aside> 
+        <div>
+            <p class="texto">Futebol</p>
+            <a href="index.html" > <img class="imgaside" src="imagens/futebol.png">
+        </div>
+        <div>
+            <p class="texto">Basquete</p>
+            <a href="index.html" > <img class="imgaside" src="imagens/basquete.jpg">
+        </div>
+        <div>
+            <p class="texto">Corrida</p>
+            <a href="index.html" > <img class="imgaside" src="imagens/corrida.jpg">
+        </div>
+    </aside>
+<!--Fim Aside-->
+<!--Main-->
+<div> 
     <main>
+        <h1 id="h1">Produtos</h1>
         <div class="elemento_pai">
-            <!-- card -->
+            <!--Card-->
             <div class="card">
-                <img src="imagens/manoel.jpg" alt="">
-                <div class="texto">
-                    <p>
-                        qualquer coisa para o card qualquer coisa para o card 
-                    </p>
-                    <a href="#">Saiba Mais</a>
+                <img class="imgcard" src="imagens/tenis1.png">
+                <div class="comprar">
+                    <h2 id="h2">Tênis</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
                 </div>
             </div>
-            <!-- fim card -->
-            <!-- card -->
+            <!--Fim Card-->
+            <!--Card-->
             <div class="card">
-                <img src="imagens/manoel.jpg" alt="">
-                <div class="texto">
-                    <p>
-                        qualquer coisa para o card qualquer coisa para o card 
-                    </p>
-                    <a href="#">Saiba Mais</a>
+                <img class="imgcard" src="imagens/tenis2.png">
+                <div class="comprar">
+                    <h2 id="h2">Tênis</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
                 </div>
             </div>
-            <div class="elemento_pai">
-                <!-- card -->
-                <div class="card">
-                    <img src="imagens/manoel.jpg" alt="">
-                    <div class="texto">
-                        <p>
-                            qualquer coisa para o card qualquer coisa para o card 
-                        </p>
-                        <a href="#">Saiba Mais</a>
-                    </div>
+            <!--Fim Card-->
+            <!--Card-->
+            <div class="card">
+                <img class="imgcard" src="imagens/chuteira1.png">
+                <div class="comprar">
+                    <h2 id="h2">Chuteira</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
                 </div>
-                <!-- fim card -->
-                <!-- card -->
-                <div class="card">
-                    <img src="imagens/manoel.jpg" alt="">
-                    <div class="texto">
-                        <p>
-                            qualquer coisa para o card qualquer coisa para o card 
-                        </p>
-                        <a href="#">Saiba Mais</a>
-                    </div>
+            </div>
+            <!--Fim Card-->
+            <!--Card-->
+            <div class="card">
+                <img class="imgcard" src="imagens/bola1.png">
+                <div class="comprar">
+                    <h2 id="h2">Bola</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
                 </div>
-                <div class="elemento_pai">
-                    <!-- card -->
-                    <div class="card">
-                        <img src="imagens/manoel.jpg" alt="">
-                        <div class="texto">
-                            <p>
-                                qualquer coisa para o card qualquer coisa para o card 
-                            </p>
-                            <a href="#">Saiba Mais</a>
-                        </div>
-                    </div>
-                    <!-- fim card -->
-                    <!-- card -->
-                    <div class="card">
-                        <img src="imagens/manoel.jpg" alt="">
-                        <div class="texto">
-                            <p>
-                                qualquer coisa para o card qualquer coisa para o card 
-                            </p>
-                            <a href="#">Saiba Mais</a>
-                        </div>
-                    </div>
-                    <div class="elemento_pai">
-                        <!-- card -->
-                        <div class="card">
-                            <img src="imagens/manoel.jpg" alt="">
-                            <div class="texto">
-                                <p>
-                                    qualquer coisa para o card qualquer coisa para o card 
-                                </p>
-                                <a href="#">Saiba Mais</a>
-                            </div>
-                        </div>
-                        <!-- fim card -->
-                        <!-- card -->
-                        <div class="card">
-                            <img src="imagens/manoel.jpg" alt="">
-                            <div class="texto">
-                                <p>
-                                    qualquer coisa para o card qualquer coisa para o card 
-                                </p>
-                                <a href="#">Saiba Mais</a>
-                            </div>
-                        </div>
-        
+            </div>
+            <!--Fim Card-->
+            <!--Card-->
+            <div class="card">
+                <img class="imgcard" src="imagens/bola2.png">
+                <div class="comprar">
+                    <h2 id="h2">Bola</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
+                </div>
+            </div>
+            <!--Fim Card-->
+            <!--Card-->
+            <div class="card">
+                <img class="imgcard" src="imagens/bola3.png">
+                <div class="comprar">
+                    <h2 id="h2">Bola</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
+                </div>
+            </div>
+            <!--Fim Card-->
+            <!--Card-->
+            <div class="card">
+                <img class="imgcard" src="imagens/raquete1.png">
+                <div class="comprar">
+                    <h2 id="h2">Raquete</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
+                </div>
+            </div>
+            <!--Fim Card-->
+            <!--Card-->
+            <div class="card">
+                <img class="imgcard" src="imagens/raquete2.png">
+                <div class="comprar">
+                    <h2 id="h2">Raquete</h2>
+                    <h3 id="h3">R$1,00</h3>
+                    <a href="detalheproduto.html" > <img class="carrinhoimg" src="imagens/carrinho+.png">
+                </div>
+            </div>
+            <!--Fim Card-->
+        </div>
     </main>
+</div>
+<!--Fim Main-->
+<!--Footer-->
+<div>
     <footer>
-        c
+        <img class="logo" src="imagens/logo.png">
     </footer>
+</div>
+<!--Fim Footer-->
 </body>
 </html>
