--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Header-->
     <header>
         <a href="index.html" > <img class="logo" src="imagens/logo.png">
         <nav>
@@ -17,13 +18,17 @@
             </ul>
         </nav>
     </header>
+    <!--Fim do Header-->
+    <!--Aside-->
     <aside>
-        <ul class="opções">
+        <ul class="imgaside">
             <li><img class="imgaside" src="imagens/futebol.png" alt="futebol"></a></li>
             <li><img class="imgaside" src="imagens/basquete.jpg" alt="basquete"></a></li>
             <li><img class="imgaside" src="imagens/corrida.jpg" alt="corrida"></a></li>
         </ul>
     </aside>
+    <!--Fim do Aside-->
+    <!--Main-->
     <main class="maindologin">
         <div class="login">
             <h1>Login</h1>
@@ -34,8 +39,11 @@
             <button>Enviar</button>
         </div>
     </main>
+    <!--Fim do Main-->
+    <!--Footer-->
     <footer>
         <a href="index.html" > <img class="logo" src="imagens/logo.png">
     </footer>
+    <!--Fim do Footer-->
 </body>
 </html>
